wip: start writing out the test suite of spring, notice not working properly everywhere, start implementing TestSuiteConcept to fix this issue